manifests/web-service.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
      - name: dotnetwebapp
        image: hansenms/aspdotnet:0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: web-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
